--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Thông tin Open Graph cho ảnh đại diện -->
-  <meta property="og:image" content="https://yenstudio.com.vn/tri-thao.jpg" />
+  <!-- <meta property="og:image" content="https://yenstudio.com.vn/tri-thao.jpg" /> -->
   <meta property="og:image:width" content="600" /> <!-- Chiều rộng ảnh đại diện -->
   <meta property="og:image:height" content="300" /> <!-- Chiều cao ảnh đại diện -->
 
   <!-- Các thông tin khác cho Open Graph -->
-  <meta property="og:title" content="TRI - THAO" />
-  <meta property="og:description" content="HAI TRI - THU THAO" />
-  <meta property="og:url" content="https://yenstudio.com.vn/tri-thao/thiepmoi.html" />
+  <meta property="og:title" content="VY - JOSH" />
+  <meta property="og:description" content="VY - JOSH" />
+  <!-- <meta property="og:url" content="https://yenstudio.com.vn/tri-thao/thiepmoi.html" /> -->
   <meta property="og:type" content="website" />
     <link rel="stylesheet" href="./thiep/box.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -20,7 +20,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link href="./thiep/jquery.fancybox.min.css" rel="stylesheet" />
     <script src="./thiep/jquery.fancybox.min.js"></script>
-    <title>TRI - THAO</title>
+    <title>VY - JOSH</title>
 </head>
 
 <body>
