--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -111,7 +111,9 @@
                 <label for="" class="lb-rec1">Khu Du Lịch Thuyền Và Biển </label>
                 <label for="" class="lb-rec2">Phước Hưng, Long Điền, Bà Rịa - Vũng Tàu</label>
                 <div class="btn">
-                    <a href="#"><img src="./thiep/anh/map-02.png" alt="" class="img-map"></a>
+                    <a href="https://maps.app.goo.gl/mk1HYbQiwWf71NRS7?g_st=com.google.maps.preview.copy">
+                        <img src="./thiep/anh/map-02.png" alt="" class="img-map">
+                    </a>
                 </div>
                 <img src="./thiep/anh/5-02.png" alt="" class="img-rec">
                 <img src="./thiep/anh/6-02.png" alt="" class="zoom-in img-rec2">
@@ -121,7 +123,9 @@
 
            <div id="rsvp">
                 <div class="fade-up btn">
-                    <a href="#"><img src="./thiep/anh/rsvp-02.png" alt="" class="img-rsvp1"></a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSce73P0ubcmy8rnkmZKzdwlIS_iMoAXmS00KbXpyfb0gaiRiA/viewform?usp=dialog">
+                        <img src="./thiep/anh/rsvp-02.png" alt="" class="img-rsvp1">
+                    </a>
                 </div>
                     <label for="" class="lb-rsvp1">Vui lòng hồi đáp <br>
                     trước hoặc vào ngày 10 tháng 03 năm 2025</label>
