--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -128,8 +128,8 @@
                     </a>
                 </div>
                     <label for="" class="lb-rsvp1">Vui lòng hồi đáp <br>
-                    trước hoặc vào ngày 10 tháng 03 năm 2025</label>
-                <label for="" class="lb-rsvp2">The favor of a reply is requeted on or <br>
+                    trước ngày 10 tháng 03 năm 2025</label>
+                <label for="" class="lb-rsvp2">The favor of a reply is requeted<br>
                     before march 10,2025</label>
                 <label for="" class="lb-rsvp3">We look forward to <br>
                     celebrating with you!</label>
